// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project team List page GET /case/123/project-team/ If user is inspector should not render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-xl\\">Sorry, there is a problem with your login</h1>
            <p class=\\"govuk-body\\">You are not permitted to access this URL.</p>
            <p class=\\"govuk-body\\"><a href=\\"https://has-appeal.herokuapp.com/help/contact\\" class=\\"govuk-link\\">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`Project team List page GET /case/123/project-team/ If user is not inspector should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"top-errors-hook\\" role=\\"alert\\"></div>
    <div class=\\"govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary\\">
        <div class=\\"govuk-grid-column-full\\">
            <h4 class=\\"govuk-heading-m\\"> CASE/04 </h4>
            <h1 class=\\"govuk-heading-xl\\">Title CASE/04</h1>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full govuk-body\\">Transport EN, Highways EN
                    <br>
                    <br><strong class=\\"govuk-tag govuk-tag--green\\">Pre-Application</strong>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row display--flex\\">
        <div class=\\"pins-list-menu-container\\">
            <aside class=\\"govuk-!-margin-bottom-8 pins-list-menu\\">
                <h2 class=\\"govuk-visually-hidden\\">Case Details Menu</h2>
                <nav>
                    <ul class=\\"gov-list pins-list-menu\\">
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/\\"> Overview</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-information\\"> Project information</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/key-dates\\"> Key dates</a>
                        </li>
                        <li><a class=\\"govuk-link pins-selected-item\\" href=\\"/applications-service/case/4/project-team\\"> Project team</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-documentation\\"> Project documentation</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-updates\\"> Project updates</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/examination-timetable\\"> Examination timetable</a>
                        </li>
                    </ul>
                </nav>
            </aside>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <h3 class=\\"govuk-heading-m\\">Project team</h3>
            <p class=\\"govuk-body\\">Add team members and their roles to the project.</p><a class='govuk-button govuk-!-margin-top-6'
            href='/applications-service/case/123/project-team/search'> Add team member</a>
        </div>
    </div>
</main>"
`;

exports[`Project team Search page GET /case/123/project-team/search should render the page with the search bar 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-5\\"> Search for a team member</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"govuk-grid-row govuk-!-margin-top-6\\">
        <div class=\\"govuk-grid-column-full display--flex align-items--flex-end govuk-grid-row\\">
            <div class=\\"govuk-form-group govuk-grid-column-two-thirds\\">
                <label class=\\"govuk-label govuk-hint colour--secondary\\" for=\\"query\\">Search by name or email address</label>
                <input class=\\"govuk-input\\" id=\\"query\\"
                name=\\"query\\" type=\\"text\\">
            </div>
            <div>
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Project team Search page POST /case/123/project-team/search should render an error if search term is empty 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-5\\"> Search for a team member</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"govuk-grid-row govuk-!-margin-top-6\\">
        <div class=\\"govuk-grid-column-full display--flex align-items--flex-end govuk-grid-row\\">
            <div class=\\"govuk-form-group govuk-form-group--error govuk-grid-column-two-thirds\\">
                <label class=\\"govuk-label govuk-hint colour--secondary\\" for=\\"query\\">Search by name or email address</label>
                <p id=\\"query-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a search term</p>
                <input                 class=\\"govuk-input govuk-input--error\\" id=\\"query\\" name=\\"query\\" type=\\"text\\"
                aria-describedby=\\"query-error\\">
            </div>
            <div>
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
    </form>
    <p class='govuk-body font-weight--700'>0 results</p>
</main>"
`;
